main - primeiro commit do frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,14 +28,7 @@
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "axios": "https://cdn.jsdelivr.net/npm/axios@1.7.2/dist/axios.min.js",
-    "@nestjs/core": "https://aistudiocdn.com/@nestjs/core@^11.1.6",
-    "@nestjs/common": "https://aistudiocdn.com/@nestjs/common@^11.1.6",
-    "@nestjs/passport": "https://aistudiocdn.com/@nestjs/passport@^11.0.5",
-    "@prisma/client": "https://aistudiocdn.com/@prisma/client@^6.17.0",
-    "@nestjs/jwt": "https://aistudiocdn.com/@nestjs/jwt@^11.0.0",
-    "passport-jwt": "https://aistudiocdn.com/passport-jwt@^4.0.1"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/"
   }
 }
 </script>
